<!--File Name: strings.xml-->
<!--Purpose: This file handles string objects used in the application-->
<!--Version: 1.0, Last Edit Date: 05/19/2020-->
<!--Authors: Brian Chen, Omri Chashper-->
<!--Dependencies: N/A-->

<resources>
    <string name="app_name">LeapFrogAndroid</string>
    <string name="enter_message">Enter message</string>
    <string name="send">SEND</string>
    <string name="message">Message</string>
    <string name="john_doe">John Doe</string>
    <string name="hi_man_how_are_you">hi man, how are you?</string>
    <string name="_11_40">11:40</string>
    <string name="hello_hello">hello, hello!</string>
    <string name="add_user">Add User</string>
    <string name="clear_all_data">Clear All Data</string>
    <string name="login">Log-In</string>
    <string name="username">Username</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="first_name">First Name</string>
    <string name="registration">Registration</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_registered_login_here">Already Registered? Login here</string>
    <string name="wrong_username_or_password">Wrong Username or Password</string>
    <string name="log_out">Log out</string>
    <string name="settings">Settings</string>
    <string name="no_messages_found">No messages found</string>
</resources>
