<?xml version="1.0" encoding="utf-8"?>

<!--File Name: menu_main.xml-->
<!--Purpose: This file handles the options in the hamburger menu-->
<!--Version: 1.0, Last Edit Date: 05/28/2020-->
<!--Authors: Brian Chen-->
<!--Dependencies: N/A-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/clear_data"
        android:title="@string/clear_all_data"
        app:showAsAction="never" />

    <item
        android:id="@+id/profile"
        android:title="Profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/logout"
        android:title="@string/log_out"
        app:showAsAction="never" />

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never" />
</menu>